k8s-manifests/apps/news-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: news-app
  name: news-service
  labels:
    app: news-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-service
  template:
    metadata:
      labels:
        app: news-service
    spec:
      containers:
      - name: news-service
        image: vijaypranesh/news-service:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: news-app
  name: news-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: news-service
