k8s-manifests/apps/nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-reverse-proxy
  namespace: news-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-reverse-proxy
  template:
    metadata:
      labels:
        app: nginx-reverse-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-reverse-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-reverse-proxy
  namespace: news-app
spec:
  type: LoadBalancer
  selector:
    app: nginx-reverse-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
