k8s-manifests/apps/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: news-app
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: vijaypranesh/notification-service:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: news-app
  name: notification-service
spec:
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: notification-service
