k8s-manifests/apps/web-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: news-app
  name: web-frontend
  labels:
    app: web-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-frontend
  template:
    metadata:
      labels:
        app: web-frontend
    spec:
      containers:
      - name: web-frontend
        image: vijaypranesh/web-frontend:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  namespace: news-app
  name: web-frontend
spec:
  ports:
  - port: 3002
    targetPort: 3002
  selector:
    app: web-frontend
  #type: LoadBalancer
  #ports:
  #  - protocol: TCP
  #    port: 80         # External port
  #    targetPort: 3002 # Pod port (make sure this matches your Deployment/Pod)
