k8s-manifests/apps/ingress.yml
#Use this file only in your minikube or dev environment
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-app-ingress
  namespace: news-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: news.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-frontend
            port:
              number: 3002
      - path: /news
        pathType: Prefix
        backend:
          service:
            name: news-service
            port:
              number: 3000
